--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
     <title>Steria IOT</title>
     <meta name="description" content="" />
+    <style>
+
+.temp1 {
+    size: 22px; color: red; width:200px;height:50px;position: relative; top: -320px; left:780px;
+}
+.temp2 {
+    size: 22px; color: red; width:200px;height:50px;position: relative; top: -140px; left:180px;
+}
+</style>
 </head>
 <body class="">
 <div class="wrapper">
     <div class="graphics">
-        <img src="https://web-steria.s3.eu-west-2.amazonaws.com/water_treatment_plant.png">
-         <div style="size: 22px; color: red; width:200px;height:50px;position: relative; top: -320px; left:780px" id="testdiv" class="testdiv"> Getting temperature... </div>
-        <div style="size: 22px; color: red; width:200px;height:50px;position: relative; top: -140px; left:180px" id="testdiv2" class="testdiv2"> Getting temperature... </div>
+        <img src="water_treatment_plant.png">
+         <div id="testdiv" class="temp1"> Getting temperature... </div>
+        <div id="testdiv2" class="temp2"> Getting temperature... </div>
 
     </div>
     <script src="jquery.min.js"></script>
