--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
 .touched {
     top: -170px;
     left: 780px;
-    background-color: rgba(100, 100, 100, .45);
+    background-color: rgb(255, 165, 0, .45);
     border-radius: 5px;
     border-width: 5px;
     border-color: orange;
@@ -138,6 +138,29 @@ body {
                 }
             }
 
+            const temp1Source = new EventSource("http://ec2-3-8-17-123.eu-west-2.compute.amazonaws.com/temp1-flux");
+            temp1Source.onmessage = function(event) { 
+                $("#tempdiv1").empty();
+                $("#tempdiv1")
+                        .html(
+                                "<p>Temperature is: "
+                                        + event.data
+                                        + "&#8451; </p>");
+
+            }
+
+            const temp2Source = new EventSource("http://ec2-3-8-17-123.eu-west-2.compute.amazonaws.com/temp2-flux");
+            temp1Source.onmessage = function(event) { 
+                $("#tempdiv2").empty();
+                $("#tempdiv2")
+                        .html(
+                                "<p>Temperature is: "
+                                        + event.data
+                                        + "&#8451; </p>");
+
+            }
+
+           
             //$(document).ready(function() {
             //    setInterval(function(){ doPollTouch(); }, 10000);
             //});
