--- a/index.html
+++ b/index.html
@@ -138,27 +138,27 @@ body {
                 }
             }
 
-            const temp1Source = new EventSource("http://ec2-3-8-17-123.eu-west-2.compute.amazonaws.com/temp1-flux");
-            temp1Source.onmessage = function(event) { 
-                $("#tempdiv1").empty();
-                $("#tempdiv1")
-                        .html(
-                                "<p>Temperature is: "
-                                        + event.data
-                                        + "&#8451; </p>");
+            // const temp1Source = new EventSource("http://ec2-3-8-17-123.eu-west-2.compute.amazonaws.com/temp1-flux");
+            // temp1Source.onmessage = function(event) { 
+            //     $("#tempdiv1").empty();
+            //     $("#tempdiv1")
+            //             .html(
+            //                     "<p>Temperature is: "
+            //                             + event.data
+            //                             + "&#8451; </p>");
 
-            }
+            // }
 
-            const temp2Source = new EventSource("http://ec2-3-8-17-123.eu-west-2.compute.amazonaws.com/temp2-flux");
-            temp1Source.onmessage = function(event) { 
-                $("#tempdiv2").empty();
-                $("#tempdiv2")
-                        .html(
-                                "<p>Temperature is: "
-                                        + event.data
-                                        + "&#8451; </p>");
+            // const temp2Source = new EventSource("http://ec2-3-8-17-123.eu-west-2.compute.amazonaws.com/temp2-flux");
+            // temp1Source.onmessage = function(event) { 
+            //     $("#tempdiv2").empty();
+            //     $("#tempdiv2")
+            //             .html(
+            //                     "<p>Temperature is: "
+            //                             + event.data
+            //                             + "&#8451; </p>");
 
-            }
+            // }
 
            
             //$(document).ready(function() {
